--- a/bivariate_normal.ipynb
+++ b/bivariate_normal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5a5be5bd",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,17 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "rng = np.ran"
+    "rng = np.random.default_rng(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6c167ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mu = np.arr"
    ]
   }
  ],
